--- a/index.html
+++ b/index.html
@@ -7,42 +7,42 @@
 </head>
 <body>
   <div class="ad-block">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="ad-block__img" src="./eisenhower-matrix.jpg">
+    <a class="ad-block__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="main">
-    <p id="add-section">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+  <div class="app">
+    <p class="app__add-section" id="add-section">
+      <label class="app__add-label" for="new-task">Add Item</label>
+      <div class="app__task-container">
+        <input id="new-task" class="app__task" type="text">
+        <button class="app__btn-add button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+    <h3 class="app__title">Todo</h3>
+    <ul class="app__tasks" id="incompleted-tasks">
+      <li class="app__item">
+        <input type="checkbox" class="app__checkbox">
+        <label class="app__task">Pay Bills</label>
+        <input type="text" class="app__task">
+        <button class="app__btn-edit button">Edit</button>
+        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg"></button>
       </li>
-      <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="app__item edit-mode">
+        <input type="checkbox" class="app__checkbox">
+        <label class="app__task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="app__task">
+        <button class="app__btn-edit button">Save</button>
+        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+    <h3 class="app__title">Completed</h3>
+    <ul class="app__tasks" id="completed-tasks">
+      <li class="app__item">
+        <input type="checkbox" class="app__checkbox" checked>
+        <label class="app__task">See the Doctor</label>
+        <input type="text" class="app__task">
+        <button class="app__btn-edit button">Edit</button>
+        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
