refactor: change HTML-name to lowercase according to rule 1.2 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li class="app__item edit-mode">
         <input type="checkbox" class="app__checkbox">
         <label class="app__task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="app__task">
+        <input type="text" value="go shopping" class="app__task">
         <button class="app__btn-edit button">Save</button>
         <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg"></button>
       </li>
