fix: add alt attribute for image according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="ad-block">
-    <img class="ad-block__img" src="./eisenhower-matrix.jpg">
+    <img class="ad-block__img" src="./eisenhower-matrix.jpg" alt="Eisenhower square with four task priority sections">
     <a class="ad-block__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="app">
@@ -25,14 +25,14 @@
         <label class="app__task">Pay Bills</label>
         <input type="text" class="app__task">
         <button class="app__btn-edit button">Edit</button>
-        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg"></button>
+        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
       </li>
       <li class="app__item edit-mode">
         <input type="checkbox" class="app__checkbox">
         <label class="app__task">Go Shopping</label>
         <input type="text" value="go shopping" class="app__task">
         <button class="app__btn-edit button">Save</button>
-        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg"></button>
+        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
       </li>
     </ul>
     <h3 class="app__title">Completed</h3>
@@ -42,7 +42,7 @@
         <label class="app__task">See the Doctor</label>
         <input type="text" class="app__task">
         <button class="app__btn-edit button">Edit</button>
-        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg"></button>
+        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
       </li>
     </ul>
   </div>
