refactor: change selector according to BEM methodology according to rule 3.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <ul class="app__tasks" id="incompleted-tasks">
       <li class="app__item">
         <input type="checkbox" class="app__checkbox">
-        <label class="app__task">Pay Bills</label>
-        <input type="text" class="app__task">
+        <label class="app__task app__task_label">Pay Bills</label>
+        <input type="text" class="app__task app__task_input">
         <button class="app__btn-edit button">Edit</button>
         <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
       </li>
       <li class="app__item edit-mode">
         <input type="checkbox" class="app__checkbox">
-        <label class="app__task">Go Shopping</label>
-        <input type="text" value="go shopping" class="app__task">
+        <label class="app__task app__task_label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="app__task app__task_input">
         <button class="app__btn-edit button">Save</button>
         <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
       </li>
@@ -39,8 +39,8 @@
     <ul class="app__tasks" id="completed-tasks">
       <li class="app__item">
         <input type="checkbox" class="app__checkbox" checked>
-        <label class="app__task">See the Doctor</label>
-        <input type="text" class="app__task">
+        <label class="app__task app__task_label">See the Doctor</label>
+        <input type="text" class="app__task app__task_input">
         <button class="app__btn-edit button">Edit</button>
         <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
       </li>
