--- a/index.html
+++ b/index.html
@@ -6,46 +6,53 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="ad-block">
+
+  <header class="ad-block">
     <img class="ad-block__img" src="./eisenhower-matrix.jpg" alt="Eisenhower square with four task priority sections">
     <a class="ad-block__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="app">
-    <p class="app__add-section" id="add-section">
+  </header>
+
+  <main class="app">
+    <section class="app__add-section" id="add-section">
       <label class="app__add-label" for="new-task">Add Item</label>
       <div class="app__task-container">
         <input id="new-task" class="app__task" type="text">
         <button class="app__btn-add button">Add</button>
       </div>
-    </p>
-    <h3 class="app__title">Todo</h3>
-    <ul class="app__tasks" id="incompleted-tasks">
-      <li class="app__item">
-        <input type="checkbox" class="app__checkbox">
-        <label class="app__task app__task_label">Pay Bills</label>
-        <input type="text" class="app__task app__task_input">
-        <button class="app__btn-edit button">Edit</button>
-        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
-      </li>
-      <li class="app__item edit-mode">
-        <input type="checkbox" class="app__checkbox">
-        <label class="app__task app__task_label">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="app__task app__task_input">
-        <button class="app__btn-edit button">Save</button>
-        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
-      </li>
-    </ul>
-    <h3 class="app__title">Completed</h3>
-    <ul class="app__tasks" id="completed-tasks">
-      <li class="app__item">
-        <input type="checkbox" class="app__checkbox" checked>
-        <label class="app__task app__task_label">See the Doctor</label>
-        <input type="text" class="app__task app__task_input">
-        <button class="app__btn-edit button">Edit</button>
-        <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
-      </li>
-    </ul>
-  </div>
+    </section>
+    <section class="app__add-incompleted">
+      <h3 class="app__title">Todo</h3>
+      <ul class="app__tasks" id="incompleted-tasks">
+        <li class="app__item">
+          <input type="checkbox" class="app__checkbox">
+          <label class="app__task app__task_label">Pay Bills</label>
+          <input type="text" class="app__task app__task_input">
+          <button class="app__btn-edit button">Edit</button>
+          <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
+        </li>
+        <li class="app__item edit-mode">
+          <input type="checkbox" class="app__checkbox">
+          <label class="app__task app__task_label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="app__task app__task_input">
+          <button class="app__btn-edit button">Save</button>
+          <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
+        </li>
+      </ul>  
+    </section>
+    <section class="app__add-completed">
+      <h3 class="app__title">Completed</h3>
+      <ul class="app__tasks" id="completed-tasks">
+        <li class="app__item">
+          <input type="checkbox" class="app__checkbox" checked>
+          <label class="app__task app__task_label">See the Doctor</label>
+          <input type="text" class="app__task app__task_input">
+          <button class="app__btn-edit button">Edit</button>
+          <button class="app__btn-delete button"><img class="app__btn-img" src="./remove.svg" alt="Delete button icon"></button>
+        </li>
+      </ul>
+    </section>
+  </main>
+  
   <script src="app.js"></script>
 </body>
 </html>
