refactor: replace tag-selector according to rule 3.4 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="page">
 
   <header class="ad-block">
     <img class="ad-block__img" src="./eisenhower-matrix.jpg" alt="Eisenhower square with four task priority sections">
